# Chip-8

./: Cargo.toml  README.md
cpu/: Cargo.toml
cpu/src/: lib.rs  vm_state.rs
data/: Cargo.toml
data/src/: address.rs  byte.rs  data_macros.rs  lib.rs  nibble.rs
emulator/: Cargo.toml
emulator/src/: main.rs
framebuffer/: Cargo.toml
framebuffer/src/: lib.rs  utils.rs
instruction/: Cargo.toml
instruction/src/: lib.rs  utils.rs
keyboard/: Cargo.toml
keyboard/src/: lib.rs
memory/: Cargo.toml
memory/src/: lib.rs
model/: Cargo.toml
model/src/: lib.rs  register.rs
program_counter/: Cargo.toml
program_counter/src/: lib.rs
register_bank/: Cargo.toml
register_bank/src/: lib.rs
rom_library/: Cargo.toml
rom_library/src/: lib.rs  roms.rs
