[package]
name = "cpu"
version = "0.1.0"
authors = ["Kris Chambers <kris.chambers@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
data = { path = "../data" }
model = { path = "../model" }
instruction = { path = "../instruction" }
rom_library = { path = "../rom_library" }